--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,12 @@ playlist:
   jwt:
     access-token:
       secret: mySuperSecureSecretKeyForJwtToken1234567890
+      #secret: ${JWT_ACCESS_TOKEN_SECRET}
       expiration-ms: 3600000   # 1시간
     refresh-token:
       secret: mySuperSecureSecretKeyForJwtToken1234567899
+      # secret: ${JWT_REFRESH_TOKEN_SECRET}
       expiration-ms: 604800000 # 7일
+
+    cookie:
+      secrue: ${COOKIE_SECURE:false} # 로컬 개발시에만 false
